--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,6 +1,6 @@
 <style>
   :root {
-    --gradient-start: #ff6ec4;
+    --gradient-start: #7873f5;
     --gradient-end:   #7873f5;
     --light-bg:       #f1f3f5;
     --text-dark:      #2c2e3e;
